// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform Constants should have specific properties: all exported constants 1`] = `
{
  "PLATFORM_API_EXPORT_APPLICATION_TYPES": {
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_EXPORT_CONTENT_TYPES": {
    "CSV": "csv",
    "JSON": "json",
  },
  "PLATFORM_API_EXPORT_FILENAME_PREFIX": "swatch",
  "PLATFORM_API_EXPORT_POST_TYPES": {
    "EXPIRES_AT": "expires_at",
    "FORMAT": "format",
    "NAME": "name",
    "SOURCES": "sources",
  },
  "PLATFORM_API_EXPORT_RESOURCE_TYPES": {
    "INSTANCES": "instances",
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_EXPORT_RESPONSE_DATA": "data",
  "PLATFORM_API_EXPORT_RESPONSE_META": "meta",
  "PLATFORM_API_EXPORT_RESPONSE_TYPES": {
    "EXPIRES_AT": "expires_at",
    "FORMAT": "format",
    "ID": "id",
    "NAME": "name",
    "STATUS": "status",
  },
  "PLATFORM_API_EXPORT_SOURCE_TYPES": {
    "APPLICATION": "application",
    "FILTERS": "filters",
    "RESOURCE": "resource",
  },
  "PLATFORM_API_EXPORT_STATUS_TYPES": {
    "COMPLETED": "completed",
    "FAILED": "failed",
    "PARTIAL": "partial",
    "PENDING": "pending",
    "RUNNING": "running",
  },
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
    "ENTITLED": "is_entitled",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
  "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
    "USER": "user",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
    "ORG_ADMIN": "is_org_admin",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
    "ALL": "*",
    "READ": "read",
    "WRITE": "write",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
    "ALL": "*",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
    "PERMISSION": "permission",
    "RESOURCE_DEFS": "resourceDefinitions",
  },
  "default": {
    "PLATFORM_API_EXPORT_APPLICATION_TYPES": {
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_EXPORT_CONTENT_TYPES": {
      "CSV": "csv",
      "JSON": "json",
    },
    "PLATFORM_API_EXPORT_FILENAME_PREFIX": "swatch",
    "PLATFORM_API_EXPORT_POST_TYPES": {
      "EXPIRES_AT": "expires_at",
      "FORMAT": "format",
      "NAME": "name",
      "SOURCES": "sources",
    },
    "PLATFORM_API_EXPORT_RESOURCE_TYPES": {
      "INSTANCES": "instances",
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_EXPORT_RESPONSE_DATA": "data",
    "PLATFORM_API_EXPORT_RESPONSE_META": "meta",
    "PLATFORM_API_EXPORT_RESPONSE_TYPES": {
      "EXPIRES_AT": "expires_at",
      "FORMAT": "format",
      "ID": "id",
      "NAME": "name",
      "STATUS": "status",
    },
    "PLATFORM_API_EXPORT_SOURCE_TYPES": {
      "APPLICATION": "application",
      "FILTERS": "filters",
      "RESOURCE": "resource",
    },
    "PLATFORM_API_EXPORT_STATUS_TYPES": {
      "COMPLETED": "completed",
      "FAILED": "failed",
      "PARTIAL": "partial",
      "PENDING": "pending",
      "RUNNING": "running",
    },
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
      "ENTITLED": "is_entitled",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
    "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
      "USER": "user",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
      "ORG_ADMIN": "is_org_admin",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
      "ALL": "*",
      "READ": "read",
      "WRITE": "write",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
      "ALL": "*",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
      "PERMISSION": "permission",
      "RESOURCE_DEFS": "resourceDefinitions",
    },
  },
  "platformConstants": {
    "PLATFORM_API_EXPORT_APPLICATION_TYPES": {
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_EXPORT_CONTENT_TYPES": {
      "CSV": "csv",
      "JSON": "json",
    },
    "PLATFORM_API_EXPORT_FILENAME_PREFIX": "swatch",
    "PLATFORM_API_EXPORT_POST_TYPES": {
      "EXPIRES_AT": "expires_at",
      "FORMAT": "format",
      "NAME": "name",
      "SOURCES": "sources",
    },
    "PLATFORM_API_EXPORT_RESOURCE_TYPES": {
      "INSTANCES": "instances",
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_EXPORT_RESPONSE_DATA": "data",
    "PLATFORM_API_EXPORT_RESPONSE_META": "meta",
    "PLATFORM_API_EXPORT_RESPONSE_TYPES": {
      "EXPIRES_AT": "expires_at",
      "FORMAT": "format",
      "ID": "id",
      "NAME": "name",
      "STATUS": "status",
    },
    "PLATFORM_API_EXPORT_SOURCE_TYPES": {
      "APPLICATION": "application",
      "FILTERS": "filters",
      "RESOURCE": "resource",
    },
    "PLATFORM_API_EXPORT_STATUS_TYPES": {
      "COMPLETED": "completed",
      "FAILED": "failed",
      "PARTIAL": "partial",
      "PENDING": "pending",
      "RUNNING": "running",
    },
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
      "ENTITLED": "is_entitled",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
    "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
      "USER": "user",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
      "ORG_ADMIN": "is_org_admin",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
      "ALL": "*",
      "READ": "read",
      "WRITE": "write",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
      "ALL": "*",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
      "PERMISSION": "permission",
      "RESOURCE_DEFS": "resourceDefinitions",
    },
  },
}
`;

exports[`Platform Constants should have specific properties: specific constants 1`] = `
{
  "PLATFORM_API_EXPORT_APPLICATION_TYPES": {
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_EXPORT_CONTENT_TYPES": {
    "CSV": "csv",
    "JSON": "json",
  },
  "PLATFORM_API_EXPORT_FILENAME_PREFIX": "swatch",
  "PLATFORM_API_EXPORT_POST_TYPES": {
    "EXPIRES_AT": "expires_at",
    "FORMAT": "format",
    "NAME": "name",
    "SOURCES": "sources",
  },
  "PLATFORM_API_EXPORT_RESOURCE_TYPES": {
    "INSTANCES": "instances",
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_EXPORT_RESPONSE_DATA": "data",
  "PLATFORM_API_EXPORT_RESPONSE_META": "meta",
  "PLATFORM_API_EXPORT_RESPONSE_TYPES": {
    "EXPIRES_AT": "expires_at",
    "FORMAT": "format",
    "ID": "id",
    "NAME": "name",
    "STATUS": "status",
  },
  "PLATFORM_API_EXPORT_SOURCE_TYPES": {
    "APPLICATION": "application",
    "FILTERS": "filters",
    "RESOURCE": "resource",
  },
  "PLATFORM_API_EXPORT_STATUS_TYPES": {
    "COMPLETED": "completed",
    "FAILED": "failed",
    "PARTIAL": "partial",
    "PENDING": "pending",
    "RUNNING": "running",
  },
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
    "ENTITLED": "is_entitled",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
  "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
    "USER": "user",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
    "ORG_ADMIN": "is_org_admin",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
    "ALL": "*",
    "READ": "read",
    "WRITE": "write",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
    "ALL": "*",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
    "PERMISSION": "permission",
    "RESOURCE_DEFS": "resourceDefinitions",
  },
}
`;
